EDA on the Asset

--- a/Notebook/locate_asset.ipynb
+++ b/Notebook/locate_asset.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from locate_image import extract_text_on_image, locate_image_on_image\n"
+    "from image_analysis import extract_text_on_image, locate_image_on_image\n"
    ]
   },
   {
@@ -111,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.1.0"
   }
  },
  "nbformat": 4,
